--- a/public/templates/bo.mustache
+++ b/public/templates/bo.mustache
@@ -1,14 +1,11 @@
 /**
- * 业务对象（Business Object - BO）
- * 指服务端在 Service 层处理逻辑后，对外输出的数据
+ * BO (Business Object - 业务对象)
+ * 负责定义 Service 层对外输出的数据
  */
 
 import { ApiProperty } from '@nestjs/swagger';
 
-/**
- * 建议引入 Entity (ORM) 中定义的接口
- * 可以是 sequelize/mongoose/typeorm/或者其他提前定义好的拓展模块。
- */
+// 建议引入 Entity (ORM) 中定义的接口
 // import { I{{ upperName }} } from '@/extends/sequelize';
 
 export class {{ upperName }}BO
