--- a/public/templates/dao.mustache
+++ b/public/templates/dao.mustache
@@ -11,10 +11,7 @@
 
 import { Injectable } from '@nestjs/common';
 
-/**
- * 建议引入 Entity (ORM) 中定义的实体类来实现数据持久化
- * 可以是 sequelize/mongoose/typeorm/或者其他提前定义好的拓展模块。
- */
+// 建议引入 Entity (ORM) 中定义的接口
 // import { {{ upperName }} } from '@/extends/sequelize';
 
 import { Create{{ upperName }}DTO, Find{{ upperName }}DTO, Paginated{{ upperName }}DTO, Update{{ upperName }}DTO } from '../dto';
