--- a/public/templates/manager.mustache
+++ b/public/templates/manager.mustache
@@ -1,13 +1,13 @@
 /**
  * Mananger (业务逻辑组合层)
  *
- * 当前层级负责实现复杂业务逻辑，表达复杂业务概念。
+ * 当前层级负责实现复杂业务逻辑，表达复杂业务概念
  *
  * 本层的使用场景有：
  *
- * 1. 对 Service 层通用能力的下沉，如调用组合、缓存、事务处理。
- * 2. 对 Provider 层的调用，组合返回数据及转化异常信息。
- * 3. 与 DAO 层交互，以及对多个 DAO 的组合复用。
+ * 1. 对 Service 层通用能力的下沉，如调用组合、缓存、事务处理
+ * 2. 对 Provider 层的调用，组合返回数据及转化异常信息
+ * 3. 与 DAO 层交互，以及对多个 DAO 的组合复用
  */
 
 import { Injectable } from '@nestjs/common';
