--- a/public/templates/controller.mustache
+++ b/public/templates/controller.mustache
@@ -4,7 +4,7 @@
  * 本层的使用场景有：
  *
  * 1. 定义 Router Path
- * 2. 指定 DTO (输入)。
+ * 2. 指定 DTO (输入)
  * 4. 指定 Logic Flow，将业务处理转发到 Service 层，并获取 BO (输出)
  */
 
