--- a/public/templates/service.mustache
+++ b/public/templates/service.mustache
@@ -1,11 +1,11 @@
 /**
  * Service (业务逻辑处理层)
  *
- * 当前层级负责定义对外暴露的能力，即本身可以完成哪些任务，并负责对内协调 Mananger/DAO 层来处理业务逻辑。
+ * 当前层级负责定义对外暴露的能力，即本身可以完成哪些任务，并负责对内协调 Mananger/DAO 层来处理业务逻辑
  *
  * 本层的使用场景有：
  *
- * 1. 对 Mananger 层的调用。
+ * 1. 对 Mananger 层的调用
  * 2. 对 DAO 层的调用 (简单的 CURD 场景)
  *
  * 当设计复杂业务场景时，应该考虑将 Service 部分处理逻辑下沉为 Manager
