--- a/public/templates/provider.mustache
+++ b/public/templates/provider.mustache
@@ -8,7 +8,7 @@ export class {{ upperName }}Provider {}
 
 // /** {{ upperName }} 工厂提供者（支持异步加载） */
 // export class {{ upperName }}FactoryProvider {
-//   public static provide = '{{ upperName }}'
+//   public static readonly provide = '{{ upperName }}'
 
 //   public static getProvider() {
 //     return {
