--- a/public/templates/bo.mustache
+++ b/public/templates/bo.mustache
@@ -1,7 +1,7 @@
 /**
  * BO (Business Object - 业务对象)
  *
- * 负责定义 Service 层对外输出的数据
+ * 负责定义 Service 层对外输出的数据，或者是其他 Server 的返回数据
  */
 
 import { ApiProperty } from '@nestjs/swagger';
