--- a/public/templates/controller.mustache
+++ b/public/templates/controller.mustache
@@ -1,12 +1,18 @@
 /**
  * Controller (业务逻辑控制层)
  *
+ * 当前层级负责逻辑的控制与转发，并负责对内协调 Service 层来处理业务逻辑
+ *
  * 本层的使用场景有：
  *
- * 1. 定义 Router Path
- * 2. 指定 DTO (输入)
- * 3. 指定 Logic Flow，将业务处理转发到 Service 层，并获取 BO (输出)
+ * 1. 定义 Router/Swagger/Cron
+ * 2. 绑定 DTO (输入)
+ * 3. 将业务处理转发到 Service 层
+ * 4. 绑定 BO (输入)
+ *
+ * 不可以在 Controller 内直接调用 Mananger/Provider/DAO 层来处理业务逻辑
  */
+
 
 import { HTTP_STATUS, IResponsePaginated } from '@/common';
 import { ApiExtraModels, ApiOperation, ApiTags } from '@nestjs/swagger';
