--- a/public/templates/service.mustache
+++ b/public/templates/service.mustache
@@ -1,12 +1,13 @@
 /**
  * Service (业务逻辑处理层)
  *
- * 当前层级负责定义对外暴露的能力，即本身可以完成哪些任务，并负责对内协调 Mananger/DAO 层来处理业务逻辑
+ * 当前层级负责定义对外暴露的能力，即本身可以完成哪些任务，并负责对内协调 Mananger/Provider/DAO 层来处理业务逻辑
  *
  * 本层的使用场景有：
  *
  * 1. 对 Mananger 层的调用
- * 2. 对 DAO 层的调用 (简单的 CURD 场景)
+ * 2. 对 Provider 层的调用
+ * 3. 对 DAO 层的调用
  *
  * 当设计复杂业务场景时，应该考虑将 Service 部分处理逻辑下沉为 Manager
  */
