feat: change provider

--- a/public/templates/provider.mustache
+++ b/public/templates/provider.mustache
@@ -7,20 +7,20 @@ export class {{ upperName }}Provider {}
 // import { BaseConfig, ConfigProvider } from '@/extends/config';
 
 // /**
-//  * {{ upperName }} 自定义提供者（使用工厂模式，支持异步加载）
+//  * {{ upperName }} 自定义提供者
 //  *
 //  * @example:
-//  *  @Inject({{ upperName }}FactoryProvider.provide)
+//  *  @Inject({{ upperName }}Provider.provide)
 //  *  private readonly name: 返回的对象类型
 //  *
-//  * 自定义提供者：
+//  * 自定义提供者类型：
 //  *
 //  * @see: 工厂提供者 - useFactory
 //  * @see: 别名提供者 - useExisting
 //  * @see: 类提供者 - useClass
 //  * @see: 值提供者 - useValue
 //  */
-// export class {{ upperName }}FactoryProvider {
+// export class {{ upperName }}Provider {
 //   public static readonly provide = this.name;
 
 //   public static getProvider() {
