fix: modules service & controller 🐓

--- a/public/templates/controller.mustache
+++ b/public/templates/controller.mustache
@@ -28,28 +28,28 @@ import { {{ upperName }}BO } from '../bo';
 @ApiExtraModels({{ upperName }}BO)
 export class {{ upperName }}Controller {
   constructor(
-    private readonly {{ fileName }}: {{ upperName }}Service,
+    private readonly service: {{ upperName }}Service,
   ) {}
 
   @ApiOperation({ summary: '查询详情 - {{ upperName }}' })
   @ApiResponseBO({{ upperName }}BO)
   @Get('/find/one')
   public async findOne(@Query() dto: Find{{ upperName }}DTO): Promise<{{ upperName }}BO> {
-    return this.{{ fileName }}.findOne(dto);
+    return this.service.findOne(dto);
   }
 
   @ApiOperation({ summary: '查询全部 - {{ upperName }}' })
   @ApiListResponseBO({{ upperName }}BO)
   @Get('/find/all')
   public async findAll(@Query() dto: Find{{ upperName }}DTO): Promise<{{ upperName }}BO[]> {
-    return this.{{ fileName }}.findAll(dto);
+    return this.service.findAll(dto);
   }
 
   @ApiOperation({ summary: '分页查询 - {{ upperName }}' })
   @ApiPaginatedResponseBO({{ upperName }}BO)
   @Get('/paginated')
   public async paginated(@Query() dto: Paginated{{ upperName }}DTO): Promise<IResponsePaginated<{{ upperName }}BO>> {
-    return this.{{ fileName }}.paginated(dto);
+    return this.service.paginated(dto);
   }
 
   @ApiOperation({ summary: '创建 - {{ upperName }}' })
@@ -57,7 +57,7 @@ export class {{ upperName }}Controller {
   @Post('/create')
   @HttpCode(HTTP_STATUS.SUCCESS)
   public async create(@Body() dto: Create{{ upperName }}DTO): Promise<{{ upperName }}BO> {
-    return this.{{ fileName }}.create(dto);
+    return this.service.create(dto);
   }
 
   @ApiOperation({ summary: '更新 - {{ upperName }}' })
@@ -66,7 +66,7 @@ export class {{ upperName }}Controller {
   @HttpCode(HTTP_STATUS.SUCCESS)
   public async update(@Param('id') id: string, @Body() dto: Update{{ upperName }}DTO): Promise<void> {
     if (!id) throw new HttpException('请求参数有误，缺少 id', HTTP_STATUS.UNPROCESSABLE);
-    return this.{{ fileName }}.update(id, dto);
+    return this.service.update(id, dto);
   }
 
   @ApiOperation({ summary: '删除 - {{ upperName }}' })
@@ -75,6 +75,6 @@ export class {{ upperName }}Controller {
   @HttpCode(HTTP_STATUS.SUCCESS)
   public async delete(@Param('id') id: string): Promise<void> {
     if (!id) throw new HttpException('请求参数有误，缺少 id', HTTP_STATUS.UNPROCESSABLE);
-    return this.{{ fileName }}.delete(id);
+    return this.service.delete(id);
   }
 }
